# ai-platform

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
app/: alert_slo_readiness.py  alert_trace_export_runtime_acceptance.py  artifact_preview.py  auth.py  auth_sessions.py  b1_b5_context_runtime_readiness.py  b1_memory_context_readiness.py  b2_sandbox_readiness.py  b5_file_tool_readiness.py  b6_operations_beta_readiness.py  backend_stage_closure_evidence.py  capabilities.py  capability_distribution.py  capacity_baseline.py  capacity_bounded_load_harness.py  context_builder.py  context_manifest.py  context_retrieval.py  control_plane_contracts.py  db.py  error_taxonomy.py  error_taxonomy_dashboard_readiness.py  execution_boundary.py  file_parser_contracts.py  file_preview_contracts.py  foundation_alpha_readiness.py  foundation_runtime_concurrency.py  g7_b3_completion_audit.py  governance_readiness.py  intent_router.py  main.py  memory_erasure_readiness.py  memory_redaction.py  model_catalog.py  models.py  multi_agent_dispatcher.py  observability_readiness.py  office_context_readiness.py  office_execution_tier.py  path_safety.py  (+29 more)
scripts/: generate_executor_context_pack_evidence_211.py  generate_sandbox_runtime_evidence_211.py  verify_executor_context_pack_211.py  verify_sandbox_runtime_211.py
tests/: test_admin_run_detail.py  test_admin_runtime_routes.py  test_admin_schema_routes.py  test_admin_skills.py  test_admin_tool_policies.py  test_agent_apps.py  test_agent_workspace_projection.py  (+141 more)
(+1486 files in other folders)
