[project]
name = "ai-platform"
version = "0.1.0"
description = "Thin platform API for enterprise AI Agent workbench"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "claude-agent-sdk==0.2.87",
  "docker>=7.1.0",
  "lxml>=6.1.0",
  "psycopg[binary,pool]>=3.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-docx>=1.2.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
